--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -22,6 +22,7 @@ jobs:
           version: '1' 
       - uses: julia-actions/cache@v2
       - name: Install dependencies
+        run: julia --project=. -e 'using Pkg; Pkg.instantiate()'
         run: julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
       - name: Build and deploy
         env:
