--- a/Project.toml
+++ b/Project.toml
@@ -1,1 +1,11 @@
+name = "HighPrecisionArithmetic"
+uuid = "694c1f89-4b53-5470-8b3e-767244e2eb4d"
+version = "0.0.1"
 
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+[compat]
+LiveServer = "1.5.0"
