--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,1 +1,10 @@
+[deps]
+HighPrecisionArithmetic = "694c1f89-4b53-5470-8b3e-767244e2eb4d"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 
+[compat]
+Documenter = "1"
+julia = "1.11"
+
+[sources]
+HighPrecisionArithmetic = {path = ".."}
