--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -22,7 +22,7 @@ jobs:
           version: '1' 
       - uses: julia-actions/cache@v2
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.resolve(); Pkg.instantiate()'
+        run: julia --project=docs/ -e 'using Pkg;  Pkg.instantiate(); Pkg.resolve()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
