--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -23,6 +23,8 @@ jobs:
       - uses: julia-actions/cache@v2
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.resolve(); Pkg.instantiate()'
+      - name: Run tests 
+        run: julia --threads=auto --project=. -e 'using Pkg; Pkg.test()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
